# SEO

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  package-lock.json  render.yaml
backend/: Dockerfile  omnirank_jobs.db  pyproject.toml  requirements.txt
backend/app/: email_templates.py  main.py
backend/app/agents/: ai_visibility_agent.py  aso_agent.py  attribution_agent.py  audit_agent.py  bulk_content_agent.py  competitor_agent.py  content_agent.py  deploy_agent.py  internal_linking_agent.py  keyword_agent.py  keyword_mapping_agent.py  (+9 more)
backend/migrations/: 001_social_email_research.sql  002_full_feature_tables.sql  003_whatsapp_links.sql
backend/omnirank_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_visibility.py  test_api_research_endpoint.py  test_aso_agent.py  test_attribution.py  test_auth_and_infra.py  test_branding.py  test_claude_client.py  test_content_brief.py  test_content_decay.py  test_copilot.py  test_crawler_service.py  test_dataforseo_and_rag.py  test_deploy_agent.py  test_edge_service.py  test_feed_service.py  test_gemini.py  test_job_store.py  test_link_agent.py  test_new_endpoints.py  test_orchestrator_agent.py  test_persistence.py  test_phase1.py  test_phase2.py  test_phase3.py  test_programmatic_agent.py  test_remediation_agents.py  test_research_agent.py  test_revenue_features.py  test_review_fixes.py  test_schema.py  test_security.py  test_security_hardening.py  test_services.py  test_site_crawl.py  test_whatsapp.py  test_workflow_agent.py
(+298 files in other folders)
