[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnirank-backend"
version = "2.0.0"
description = "OMNI-RANK OR-1 — AI-Powered SEO Agent Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.8.0",
]
# Headless rendering for JS-heavy sites (React/Vue/Next storefronts):
#   pip install -e ".[render]" && playwright install chromium
render = [
  "playwright>=1.45.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
